welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: not found: value estsurBiscuit
		if (estsurBiscuit) { vuBiscuit = true }
                    ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
	for (x <- 1 to 6) {
               ^