welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit:Boolean = false
	for (x <- 1 to 6) {
		if (estsurBiscuit) { vuBiscuit = true }
		else { return false }
	}
	
	
}